--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This website was created by Maheshwar Dhadhal. It uses data from mapbox.com and openweather.</p>
         <img class="portrait" src="/img/IMG_1188.png">
     </div>
 
